# Moran-Fixation-FPRAS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  pyproject.toml
docs/: specification.md
include/moran/: moran.hpp
include/moran/core/: concepts.hpp  numeric.hpp  parallel.hpp  random.hpp  result.hpp  types.hpp
include/moran/exact/: formulas.hpp
include/moran/fpras/: params.hpp
include/moran/graph/: csr_graph.hpp  graph_factories.hpp  graph_utils.hpp  graph_validation.hpp
include/moran/graph_structured/: naive_mc.hpp  types.hpp
include/moran/wellmixed/: fixation_probability.hpp  monte_carlo.hpp
notebooks/: monte_carlo_demo.ipynb
python/: _moran.pyi  bind_algorithms.cpp  bind_graph.cpp  helpers.hpp  pymoran.cpp
python/moran/: __init__.py  _moran.pyi  exact.py  graph.py
python/moran/algorithms/: __init__.py  naive.py
tests/: conftest.py  test_correctness_deep.py  test_graph.cpp  test_graph_algorithms.cpp  test_numeric.cpp  test_validation.py  test_wellmixed.cpp
